# metemplate

./: Cargo.toml  LICENSE  flake.nix
config/test-project/: config.toml
config/test-project/templates/: test-template.txt
config/test-project/values/: test-values.toml  test-values2.toml  test-values3.toml
config/test-project2/: config.toml
config/test-project2/values/: test-values.toml
config/test-project3/templates/: test-template.txt
nix/: home-manager.nix  package.nix
src/: cli.rs  config.rs  generate.rs  list.rs  main.rs
