[package]
name = "metemplate"
version = "0.1.0"
edition = "2024"
description = "A dead simple but functional templating engine"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

